# machine-learning-genre-classification

./: Deep_learning.ipynb  Modelo_datos_tabulares.ipynb  README.md  TransferLearning.ipynb  assets.py  centroides_fma.csv  columnas_oficiales.pkl  definitions.py  escalador_svm.pkl  main.py  main_antiguo.py  mi_pipeline.py  modelo_xgboost.pkl  notebook_prueba.ipynb  objetivo.csv  pyproject.toml  requirements.txt  schedules.py  stats_radar_generos.csv
.tmp_dagster_home_mr2v8hvq/history/: runs.db
.tmp_dagster_home_mr2v8hvq/history/runs/: .db  index.db
.tmp_dagster_home_mr2v8hvq/schedules/: schedules.db
.tmp_dagster_home_wiy7qpyj/history/: runs.db
.tmp_dagster_home_wiy7qpyj/history/runs/: .db  0c62a452-1a0f-41d2-b413-f20c5c6e084a.db  0f6d8d6f-ce25-445c-9218-fcfce95fc980.db  461ade06-77ce-49ed-873a-ee708f572054.db  61528464-1fbd-4b5b-b5c4-e036ad9ef528.db  682dec18-7e5a-4722-b97a-bd430f2b857d.db  6b5ee0a6-1ef1-4958-bc81-e96401346eed.db  963da18c-57eb-4cb5-a0a1-0699c2ca2a24.db  a59d2fe9-b4e3-4497-978a-b9ad856ad419.db  aa47cbab-7cab-4cc6-bb7a-588975f740c0.db  caf2fd51-eb2d-4f5e-9092-2139034f9ed6.db  dacf2ae5-2d0e-4d4f-a3db-543d084239ab.db  e30e0933-199d-420e-a971-3b625bd62016.db  e90e4044-7239-4b8f-adb4-7982e32c4f85.db  f27bc1be-b8c0-4cdc-8ff7-58973e4a9f1c.db  f4cb65b9-7484-4260-a681-8c331bfd18ac.db  index.db
.tmp_dagster_home_wiy7qpyj/schedules/: schedules.db
.tmp_dagster_home_wiy7qpyj/storage/: cargar_datos_brutos  entrenar_modelo_tabular  evaluar_rendimiento  explicabilidad_modelo  modelo_entrenado
