[project]
name = "clasificacion-genero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "joblib",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pkg-resources",
    "pkg-resourcesuv",
    "plotly>=6.7.0",
    "scikit-learn>=1.7.2",
    "setuptools>=82.0.1",
    "streamlit>=1.57.0",
    "tensorflow>=2.21.0",
    "tensorflow-hub>=0.16.1",
]
